--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="container my-2">
-        <h2>Product' List</h2>
+        <h2>Product List</h2>
         <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Create Product</a>
 
         <table border="1" class="table table-striped table-responsive-md">
@@ -29,6 +29,10 @@
                     <td>
                         <a th:href="@{/product/edit/{id}(id=${product.productId})}"
                             class="btn btn-warning btn-sm">Edit</a>
+                        <form th:action="@{/product/delete/{id}(id=${product.productId})}" method="post"
+                            style="display:inline;">
+                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                        </form>
                     </td>
                 </tr>
             </tbody>
